crates/compiler/parser/tests/snapshots/expressions::chained_operations.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Code ---
func test() { obj.method1().field.method2()[0].final_field; }
--- AST ---
[
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    5..9,
                ),
                params: [],
                return_type: Tuple(
                    [],
                ),
                body: [
                    Spanned(
                        Expression(
                            Spanned(
                                MemberAccess {
                                    object: Spanned(
                                        IndexAccess {
                                            array: Spanned(
                                                FunctionCall {
                                                    callee: Spanned(
                                                        MemberAccess {
                                                            object: Spanned(
                                                                MemberAccess {
                                                                    object: Spanned(
                                                                        FunctionCall {
                                                                            callee: Spanned(
                                                                                MemberAccess {
                                                                                    object: Spanned(
                                                                                        Identifier(
                                                                                            Spanned(
                                                                                                "obj",
                                                                                                14..17,
                                                                                            ),
                                                                                        ),
                                                                                        14..17,
                                                                                    ),
                                                                                    field: Spanned(
                                                                                        "method1",
                                                                                        18..25,
                                                                                    ),
                                                                                },
                                                                                14..25,
                                                                            ),
                                                                            args: [],
                                                                        },
                                                                        14..27,
                                                                    ),
                                                                    field: Spanned(
                                                                        "field",
                                                                        28..33,
                                                                    ),
                                                                },
                                                                14..33,
                                                            ),
                                                            field: Spanned(
                                                                "method2",
                                                                34..41,
                                                            ),
                                                        },
                                                        14..41,
                                                    ),
                                                    args: [],
                                                },
                                                14..43,
                                            ),
                                            index: Spanned(
                                                Literal(
                                                    0,
                                                ),
                                                44..45,
                                            ),
                                        },
                                        14..45,
                                    ),
                                    field: Spanned(
                                        "final_field",
                                        47..58,
                                    ),
                                },
                                14..58,
                            ),
                        ),
                        14..59,
                    ),
                ],
            },
            0..61,
        ),
    ),
]
