crates/compiler/parser/tests/snapshots/expressions::comparison_and_logical.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Code ---
fn test() { a == b && c != d; }
--- AST ---
[
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    3..7,
                ),
                params: [],
                return_type: Spanned(
                    Tuple(
                        [],
                    ),
                    0..0,
                ),
                body: [
                    Spanned(
                        Expression(
                            Spanned(
                                BinaryOp {
                                    op: And,
                                    left: Spanned(
                                        BinaryOp {
                                            op: Eq,
                                            left: Spanned(
                                                Identifier(
                                                    Spanned(
                                                        "a",
                                                        12..13,
                                                    ),
                                                ),
                                                12..13,
                                            ),
                                            right: Spanned(
                                                Identifier(
                                                    Spanned(
                                                        "b",
                                                        17..18,
                                                    ),
                                                ),
                                                17..18,
                                            ),
                                        },
                                        12..18,
                                    ),
                                    right: Spanned(
                                        BinaryOp {
                                            op: Neq,
                                            left: Spanned(
                                                Identifier(
                                                    Spanned(
                                                        "c",
                                                        22..23,
                                                    ),
                                                ),
                                                22..23,
                                            ),
                                            right: Spanned(
                                                Identifier(
                                                    Spanned(
                                                        "d",
                                                        27..28,
                                                    ),
                                                ),
                                                27..28,
                                            ),
                                        },
                                        22..28,
                                    ),
                                },
                                12..28,
                            ),
                        ),
                        12..29,
                    ),
                ],
            },
            0..31,
        ),
    ),
]
