crates/compiler/parser/tests/snapshots/expressions::complex_expression_precedence.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Code ---
func test() { result = a.field[0].method(b + c * d, e && f || g).value; }
--- AST ---
[
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    5..9,
                ),
                params: [],
                return_type: Tuple(
                    [],
                ),
                body: [
                    Spanned(
                        Assignment {
                            lhs: Spanned(
                                Identifier(
                                    Spanned(
                                        "result",
                                        14..20,
                                    ),
                                ),
                                14..20,
                            ),
                            rhs: Spanned(
                                MemberAccess {
                                    object: Spanned(
                                        FunctionCall {
                                            callee: Spanned(
                                                MemberAccess {
                                                    object: Spanned(
                                                        IndexAccess {
                                                            array: Spanned(
                                                                MemberAccess {
                                                                    object: Spanned(
                                                                        Identifier(
                                                                            Spanned(
                                                                                "a",
                                                                                23..24,
                                                                            ),
                                                                        ),
                                                                        23..24,
                                                                    ),
                                                                    field: Spanned(
                                                                        "field",
                                                                        25..30,
                                                                    ),
                                                                },
                                                                23..30,
                                                            ),
                                                            index: Spanned(
                                                                Literal(
                                                                    0,
                                                                ),
                                                                31..32,
                                                            ),
                                                        },
                                                        23..32,
                                                    ),
                                                    field: Spanned(
                                                        "method",
                                                        34..40,
                                                    ),
                                                },
                                                23..40,
                                            ),
                                            args: [
                                                Spanned(
                                                    BinaryOp {
                                                        op: Add,
                                                        left: Spanned(
                                                            Identifier(
                                                                Spanned(
                                                                    "b",
                                                                    41..42,
                                                                ),
                                                            ),
                                                            41..42,
                                                        ),
                                                        right: Spanned(
                                                            BinaryOp {
                                                                op: Mul,
                                                                left: Spanned(
                                                                    Identifier(
                                                                        Spanned(
                                                                            "c",
                                                                            45..46,
                                                                        ),
                                                                    ),
                                                                    45..46,
                                                                ),
                                                                right: Spanned(
                                                                    Identifier(
                                                                        Spanned(
                                                                            "d",
                                                                            49..50,
                                                                        ),
                                                                    ),
                                                                    49..50,
                                                                ),
                                                            },
                                                            45..50,
                                                        ),
                                                    },
                                                    41..50,
                                                ),
                                                Spanned(
                                                    BinaryOp {
                                                        op: Or,
                                                        left: Spanned(
                                                            BinaryOp {
                                                                op: And,
                                                                left: Spanned(
                                                                    Identifier(
                                                                        Spanned(
                                                                            "e",
                                                                            52..53,
                                                                        ),
                                                                    ),
                                                                    52..53,
                                                                ),
                                                                right: Spanned(
                                                                    Identifier(
                                                                        Spanned(
                                                                            "f",
                                                                            57..58,
                                                                        ),
                                                                    ),
                                                                    57..58,
                                                                ),
                                                            },
                                                            52..58,
                                                        ),
                                                        right: Spanned(
                                                            Identifier(
                                                                Spanned(
                                                                    "g",
                                                                    62..63,
                                                                ),
                                                            ),
                                                            62..63,
                                                        ),
                                                    },
                                                    52..63,
                                                ),
                                            ],
                                        },
                                        23..63,
                                    ),
                                    field: Spanned(
                                        "value",
                                        65..70,
                                    ),
                                },
                                23..70,
                            ),
                        },
                        14..71,
                    ),
                ],
            },
            0..73,
        ),
    ),
]
