crates/compiler/parser/tests/snapshots/expressions::deeply_nested.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Code ---
func test() { ((((((a + b) * c) - d) / e) == f) && g); }
--- AST ---
[
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    5..9,
                ),
                params: [],
                return_type: Tuple(
                    [],
                ),
                body: [
                    Spanned(
                        Expression(
                            Spanned(
                                BinaryOp {
                                    op: And,
                                    left: Spanned(
                                        BinaryOp {
                                            op: Eq,
                                            left: Spanned(
                                                BinaryOp {
                                                    op: Div,
                                                    left: Spanned(
                                                        BinaryOp {
                                                            op: Sub,
                                                            left: Spanned(
                                                                BinaryOp {
                                                                    op: Mul,
                                                                    left: Spanned(
                                                                        BinaryOp {
                                                                            op: Add,
                                                                            left: Spanned(
                                                                                Identifier(
                                                                                    Spanned(
                                                                                        "a",
                                                                                        20..21,
                                                                                    ),
                                                                                ),
                                                                                20..21,
                                                                            ),
                                                                            right: Spanned(
                                                                                Identifier(
                                                                                    Spanned(
                                                                                        "b",
                                                                                        24..25,
                                                                                    ),
                                                                                ),
                                                                                24..25,
                                                                            ),
                                                                        },
                                                                        19..26,
                                                                    ),
                                                                    right: Spanned(
                                                                        Identifier(
                                                                            Spanned(
                                                                                "c",
                                                                                29..30,
                                                                            ),
                                                                        ),
                                                                        29..30,
                                                                    ),
                                                                },
                                                                18..31,
                                                            ),
                                                            right: Spanned(
                                                                Identifier(
                                                                    Spanned(
                                                                        "d",
                                                                        34..35,
                                                                    ),
                                                                ),
                                                                34..35,
                                                            ),
                                                        },
                                                        17..36,
                                                    ),
                                                    right: Spanned(
                                                        Identifier(
                                                            Spanned(
                                                                "e",
                                                                39..40,
                                                            ),
                                                        ),
                                                        39..40,
                                                    ),
                                                },
                                                16..41,
                                            ),
                                            right: Spanned(
                                                Identifier(
                                                    Spanned(
                                                        "f",
                                                        45..46,
                                                    ),
                                                ),
                                                45..46,
                                            ),
                                        },
                                        15..47,
                                    ),
                                    right: Spanned(
                                        Identifier(
                                            Spanned(
                                                "g",
                                                51..52,
                                            ),
                                        ),
                                        51..52,
                                    ),
                                },
                                14..53,
                            ),
                        ),
                        14..54,
                    ),
                ],
            },
            0..56,
        ),
    ),
]
