crates/compiler/parser/tests/snapshots/expressions::empty_struct_literal.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Code ---
func test() { Unit {}; }
--- AST ---
[
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    5..9,
                ),
                params: [],
                return_type: None,
                body: [
                    Spanned(
                        Expression(
                            Spanned(
                                StructLiteral {
                                    name: Spanned(
                                        "Unit",
                                        14..18,
                                    ),
                                    fields: [],
                                },
                                14..21,
                            ),
                        ),
                        14..22,
                    ),
                ],
            },
            0..24,
        ),
    ),
]
