crates/compiler/parser/tests/snapshots/expressions::integer_literal.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Code ---
func test() { 42; }
--- AST ---
[
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    5..9,
                ),
                params: [],
                return_type: None,
                body: [
                    Spanned(
                        Expression(
                            Spanned(
                                Literal(
                                    42,
                                ),
                                14..16,
                            ),
                        ),
                        14..17,
                    ),
                ],
            },
            0..19,
        ),
    ),
]
