crates/compiler/parser/tests/snapshots/expressions::long_identifier.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Code ---
fn test() { very_long_variable_name_that_tests_identifier_parsing; }
--- AST ---
[
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    3..7,
                ),
                params: [],
                return_type: Tuple(
                    [],
                ),
                body: [
                    Spanned(
                        Expression(
                            Spanned(
                                Identifier(
                                    Spanned(
                                        "very_long_variable_name_that_tests_identifier_parsing",
                                        12..65,
                                    ),
                                ),
                                12..65,
                            ),
                        ),
                        12..66,
                    ),
                ],
            },
            0..68,
        ),
    ),
]
