crates/compiler/parser/tests/snapshots/expressions::multiplication_precedence.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Code ---
func test() { a + b * c; }
--- AST ---
[
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    5..9,
                ),
                params: [],
                return_type: Tuple(
                    [],
                ),
                body: [
                    Spanned(
                        Expression(
                            Spanned(
                                BinaryOp {
                                    op: Add,
                                    left: Spanned(
                                        Identifier(
                                            Spanned(
                                                "a",
                                                14..15,
                                            ),
                                        ),
                                        14..15,
                                    ),
                                    right: Spanned(
                                        BinaryOp {
                                            op: Mul,
                                            left: Spanned(
                                                Identifier(
                                                    Spanned(
                                                        "b",
                                                        18..19,
                                                    ),
                                                ),
                                                18..19,
                                            ),
                                            right: Spanned(
                                                Identifier(
                                                    Spanned(
                                                        "c",
                                                        22..23,
                                                    ),
                                                ),
                                                22..23,
                                            ),
                                        },
                                        18..23,
                                    ),
                                },
                                14..23,
                            ),
                        ),
                        14..24,
                    ),
                ],
            },
            0..26,
        ),
    ),
]
